feat(client):     - Añade Tanstack-query y configura Provider correctamente

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -10,6 +10,12 @@
     a {
         @apply no-underline text-cyan-700;
     }
+    h1 {
+        @apply text-2xl font-bold;
+    }
+    h2 {
+        @apply text-xl font-semibold;
+    }
 }
 
 @layer utilities {
